--- a/assets/style/Elements/Main/_Progress.scss
+++ b/assets/style/Elements/Main/_Progress.scss
@@ -74,6 +74,7 @@
     align-items: center;
     justify-content: center;
     transition: transform 400ms ease;
+    z-index: -1;
   }
   .progress-card{
     display: flex;
