--- a/assets/style/Elements/Main/_Progress.scss
+++ b/assets/style/Elements/Main/_Progress.scss
@@ -1,9 +1,11 @@
   .main-progress{
+    position: relative;
     height: 825px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    z-index: -1;
   }
   .main-progress__wrapper{
     width: 100%;
