--- a/assets/style/Base.css
+++ b/assets/style/Base.css
@@ -17,6 +17,7 @@
   align-items: center;
   justify-content: space-around;
   border-radius: 30px;
+  z-index: 100;
 }
 
 .logo__img {
@@ -347,6 +348,7 @@ a {
   align-items: center;
   justify-content: space-around;
   border-radius: 30px;
+  z-index: 100;
 }
 
 .logo__img {
@@ -814,11 +816,13 @@ video[poster] {
   }
 }
 .main-progress {
+  position: relative;
   height: 825px;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
+  z-index: -1;
 }
 
 .main-progress__wrapper {
