--- a/assets/style/Base.css
+++ b/assets/style/Base.css
@@ -816,11 +816,13 @@ video[poster] {
   }
 }
 .main-progress {
+  position: relative;
   height: 825px;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
+  z-index: -1;
 }
 
 .main-progress__wrapper {
@@ -875,6 +877,7 @@ input[type=radio] {
   align-items: center;
   justify-content: center;
   transition: transform 400ms ease;
+  z-index: -1;
 }
 
 .progress-card {
